<resources>
    <string name="app_name">SweetBucket</string>


    <string name="splash_loading_text">Loading Please wait...</string>
    <string name="email_hint">Email/Mobile number</string>
    <string name="pass_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="login_page_bottom_text_1">New to SweetsBucket?</string>
    <string name="login_page_bottom_text_2">Create an account</string>
    <string name="login_page_heading_1">Access to your Orders, Wishlist and Cart</string>
    <string name="login_page_heading_0">LOGIN</string>
    <string name="register_page_heading_0">Signup</string>
    <string name="register_page_heading_1">Connect with us and get your favourite products at Home.</string>
    <string name="name_hint">Your Name</string>
    <string name="mobile_hint">Mobile</string>
    <string name="email_text">Email (Optional)</string>
    <string name="confirm_pass_text">Confirm password</string>
    <string name="register_btn_text">Register</string>
    <string name="register_page_bottom_text_1">Already have an account?</string>
    <string name="register_page_bottom_text_2">Sign in</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_sweets">Sweets</string>
    <string name="nav_shops">Shops</string>
    <string name="nav_brands">Brands</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_order">My Orders</string>
    <string name="nav_payment">My Payments</string>
    <string name="nav_address">My Address</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Sweets</item>
        <item>Shops</item>
        <item>Brands</item>
        <item>Popular</item>
        <item>My Orders</item>
        <item>My Payments</item>
        <item>My Address</item>
        <item>Contact Us</item>
        <item>About Us</item>
        <item>All Products</item>
    </string-array>

    <string-array name="sort_spinner_items">
        <item>New Arrivals</item>
        <item>Price low to high</item>
        <item>Price high to low</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_contact_us">Contact Us</string>
    <string name="activity_title_popular">Popular</string>
    <string name="activity_title_orders">My Orders</string>
    <string name="activity_title_payments">My Payments</string>
    <string name="activity_title_address">My Address</string>
    <string name="activity_title_brands">Brands</string>
    <string name="activity_title_shops">Shops</string>
    <string name="activity_title_sweets">Sweets</string>
    <string name="activity_title_home">Home</string>
    <string name="action_logout">Logout</string>


    <string name="search_bar_hint">Search Sweets,Shops</string>
    <string name="contact_us_heading">We are happy to answer any queries you might have.
        Please fill out the form below and we will get in touch with you. </string>

    <string name="about_us_text">
         Hello and welcome to SweetsBucket.com, the place to find the best Indian Sweets and Mithai for every taste and occasion. We thoroughly check the quality of our goods, working only with reliable suppliers so that you only receive the best quality product.

We at SweetsBucket.com believe in high quality and exceptional customer service. But most importantly, we believe shopping is a right, not a luxury, so we strive to deliver the best products at the most affordable prices, and ship them to you regardless of where you are located.

The interests of our customers are always the top priority for us, so we hope you will enjoy our products as much as we enjoy making them available to you.

If you’re looking for something new, you’re in the right place. We strive to be industrious and innovative, offering our customers something they want, putting their desires at the top of our priority list.

We started as a small business in Varanasi [Kashi Vishwanath],in the northern Indian state of Uttar Pradesh in 2019, and our aim is to continue providing our customers with products that keep them happy, at prices that keep them happy.
    </string>
    <string name="app_close_dialog_message">Do you want to logout?</string>
    <string name="app_exit_dialog_message">Do you want to Exit?</string>
    <string name="pin_delievry_status_succes">Service available at your pin</string>
    <string name="pin_delievry_status_fail">Sorry!,Currently service not available at your pin</string>
    
    <string name="ratings_and_revies_text_1">0 Ratings and Reviews</string>
    <string name="ratings_and_revies_text_2">out of 5 Stars</string>
    <string name="ratings_and_revies_text_3">Review and Rate this product</string>


    <string-array name="inc_spinner_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>More</item>
    </string-array>
</resources>
