<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/contact_us_heading"
            android:textSize="@dimen/text_size_18"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/name_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/email_text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18"
                android:hint="@string/mobile_hint"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:maxLines="5"
            android:hint="How can we asist you?"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:background="@drawable/background_rectangular_edittext"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18"
            android:text="Submit"
            android:textAllCaps="false"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>
